test/log/reduction/vrsum_v_i16_m.txt
vrsum_v_i16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrsum_v_i16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrsum_v_i16_m.c:30:6: warning: no previous prototype for 'vrsum_v_i16_m_golden' [-Wmissing-prototypes]
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vrsum_v_i16_m.c: In function 'vrsum_v_i16_m_golden':
vrsum_v_i16_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrsum_v_i16_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrsum_v_i16_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrsum_v_i16_m.c: In function 'main':
vrsum_v_i16_m.c:37:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool32_t mask;
      |              ^~~~
vrsum_v_i16_m.c:30:37: note: shadowed declaration is here
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                           ~~~~~~~~~~^~~~
vrsum_v_i16_m.c:38:16: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   38 |     int16x32_t maskoff;
      |                ^~~~~~~
vrsum_v_i16_m.c:30:51: note: shadowed declaration is here
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                          ~~~~~~~~~^~~~~~~
vrsum_v_i16_m.c:39:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     int16x32_t a;
      |                ^
vrsum_v_i16_m.c:30:68: note: shadowed declaration is here
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                                           ~~~~~~~~~^
vrsum_v_i16_m.c:45:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     int16_t exp_result[32] = {0};
      |             ^~~~~~~~~~
vrsum_v_i16_m.c:30:79: note: shadowed declaration is here
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                                                      ~~~~~~~~~^~~~~~~~~~
vrsum_v_i16_m.c:47:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   47 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrsum_v_i16_m.c:55:28: error: incompatible type for argument 1 of 'vrsum_v_i16_m'
   55 |     result = vrsum_v_i16_m(mask,maskoff,a);
      |                            ^~~~
      |                            |
      |                            bool32_t
In file included from vrsum_v_i16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1911:1: note: expected 'bool32x2_t' but argument is of type 'bool32_t'
 1911 | __RUGRATS_REDUC_V_OP (rsum, i, int, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~
vrsum_v_i16_m.c: In function 'vrsum_v_i16_m_golden':
vrsum_v_i16_m.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vrsum_v_i16_m.c:30:37: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                           ~~~~~~~~~~^~~~
vrsum_v_i16_m.c:30:51: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                          ~~~~~~~~~^~~~~~~
vrsum_v_i16_m.c:30:68: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                                           ~~~~~~~~~^
vrsum_v_i16_m.c:30:79: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrsum_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *exp_result) {
      |                                                                      ~~~~~~~~~^~~~~~~~~~
At top level:
vrsum_v_i16_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrsum_v_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrsum_v_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrsum_v_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrsum_v_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed